--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,7 @@
+root = true                         # 根目录的配置文件，编辑器会由当前目录向上查找，如果找到 `roor = true` 的文件，则不再查找
+
 [*.{js,jsx,ts,tsx,vue}]
-indent_style = space
-indent_size = 2
+indent_style = space                # 空格缩进
+indent_size = 4
 trim_trailing_whitespace = true
 insert_final_newline = true
