--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue": "^2.6.10",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.3",
-    "vue-table-with-tree-grid": "^0.2.4"
+    "vue-table-with-tree-grid": "^0.2.4",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
