--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "vue": "^2.6.10",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.3",
-    "vue-table-with-tree-grid": "^0.2.4",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-plugin-eslint": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
@@ -28,9 +28,11 @@
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-cli-plugin-element": "^1.0.1",
+    "vue-table-with-tree-grid": "^0.2.4",
     "vue-template-compiler": "^2.6.10"
   }
 }
